Made changing recipe types also change all empty patterns
Made pickaxes work on machines
Fixed disabled slots accepting ghost ingredients
Fixed possible desync when loading patterns